Add a EditorControls and EditorMenu class

--- a/src/scripts/templates/timeline.tpl.html
+++ b/src/scripts/templates/timeline.tpl.html
@@ -1,12 +1,12 @@
 <div class="editor__time">
-  <div class="editor__menu">
+  <nav class="editor__menu">
     <span class="menu-item">
       Add
       <div class="submenu submenu--add"></div>
     </span>
     <a href="#" class="menu-item" data-action="export">Export</a>
     <a href="#" class="menu-item menu-item--toggle" data-action="toggle"><i class="icon-toggle"></i></a>
-  </div>
+  </nav>
   <div class="editor__time-controls controls">
     <a href="#" class="control control--first icon-first"></a>
     <a href="#" class="control control--play-pause icon-play"></a>
