BEM: starting to change editor__time to timeline

--- a/src/scripts/templates/timeline.tpl.html
+++ b/src/scripts/templates/timeline.tpl.html
@@ -1,17 +1,17 @@
-<div class="editor__time">
-  <nav class="editor__menu">
+<div class="timeline">
+  <nav class="timeline__menu">
     <a href="#" class="menu-item" data-action="export">Export</a>
     <a href="#" class="menu-item menu-item--toggle" data-action="toggle"><i class="icon-toggle"></i></a>
   </nav>
-  <div class="editor__time-controls controls">
+  <div class="timeline__controls controls">
     <a href="#" class="control control--first icon-first"></a>
     <a href="#" class="control control--play-pause icon-play"></a>
     <a href="#" class="control control--last icon-last"></a>
   </div>
-  <div class="editor__time-header">
+  <div class="timeline__header">
 
   </div>
-  <div class="editor__time-main">
+  <div class="timeline__main">
 
   </div>
 </div>
