--- a/src/styles/editor.sass
+++ b/src/styles/editor.sass
@@ -4,6 +4,6 @@ html, body
   margin: 0
   padding: 0
 
-.editor__time,
+.timeline,
 .properties-editor
   font-family: 'Source Sans Pro', Helvetica, sans-serif
