--- a/src/styles/editor/_timeline-header.sass
+++ b/src/styles/editor/_timeline-header.sass
@@ -3,7 +3,7 @@ $menu_height: 25px
 .graph-mask
   fill: $editor_bg
 
-.editor__menu
+.timeline__menu
   +vertical-separator()
   position: absolute
   top: -$menu_height - 2px
