--- a/src/styles/editor/_timeline.sass
+++ b/src/styles/editor/_timeline.sass
@@ -1,4 +1,4 @@
-.editor__time-main
+.timeline__main
   height: 220px
   position: absolute
   left: 0
@@ -18,7 +18,7 @@
 .line--label
   cursor: pointer
 
-.editor__time
+.timeline
   +vertical-separator()
   position: fixed
   bottom: 0
