BEM: change some other classes

--- a/src/styles/editor/_editor.sass
+++ b/src/styles/editor/_editor.sass
@@ -3,6 +3,8 @@
 @import "timeline-controls"
 @import "timeline"
 @import "properties-editor"
-@import "key"
+@import "time-indicator"
 @import "line-label"
 @import "line-separator"
+@import "key"
+@import "error"
