show current time in controls

--- a/src/styles/editor/_editor.sass
+++ b/src/styles/editor/_editor.sass
@@ -1,6 +1,6 @@
 @import "settings"
 @import "timeline-header"
-@import "timeline-controls"
+@import "controls"
 @import "timeline"
 @import "properties-editor"
 @import "time-indicator"
