--- a/src/scripts/templates/timeline.tpl.html
+++ b/src/scripts/templates/timeline.tpl.html
@@ -7,6 +7,7 @@
     <a href="#" class="control control--first icon-first"></a>
     <a href="#" class="control control--play-pause icon-play"></a>
     <a href="#" class="control control--last icon-last"></a>
+    <input type="text" class="control control--time" />
   </div>
   <div class="timeline__header">
 
