highlight key in property editor

--- a/src/styles/editor/_properties-editor.sass
+++ b/src/styles/editor/_properties-editor.sass
@@ -63,6 +63,9 @@
   &:focus
     outline: 0
 
+  &--active
+    background: #39C2C8
+
 .property__input
   background: #57595a
   border: 1px solid #2f3132
