better editor keys display when selecting multiple keys

--- a/src/styles/editor/_properties-editor.sass
+++ b/src/styles/editor/_properties-editor.sass
@@ -120,14 +120,16 @@ a.menu-item--toggle-side
     left: -20px
 
 .actions
-  +vertical-separator
+  +vertical-separator(bottom)
   margin-left: -10px
   margin-right: -10px
   padding-left: 10px
   padding-right: 10px
-  margin-top: 40px
+  margin-bottom: 20px
+  padding-bottom: 20px
   padding-top: 20px
   text-align: right
+
 
 .actions__item
   transition: background 0.3s
