add an input to define the total duration, fix #7

--- a/src/scripts/templates/timeline.tpl.html
+++ b/src/scripts/templates/timeline.tpl.html
@@ -7,7 +7,7 @@
     <a href="#" class="control control--first icon-first"></a>
     <a href="#" class="control control--play-pause icon-play"></a>
     <a href="#" class="control control--last icon-last"></a>
-    <input type="text" class="control control--time" />
+    <input type="text" class="control control--input control--time" /> <span class="control__time-separator">/</span> <input type="text" class="control control--input control--time-end" />
   </div>
   <div class="timeline__header">
 
