highlight bar items, handle key/bar highlighting in selectionmanger

--- a/src/styles/editor/_editor.sass
+++ b/src/styles/editor/_editor.sass
@@ -6,6 +6,7 @@
 @import "time-indicator"
 @import "line-label"
 @import "line-separator"
+@import "bar"
 @import "key"
 @import "error"
 @import "selection"
