display the key time in editor, partial #3

--- a/src/scripts/templates/propertyTween.tpl.html
+++ b/src/scripts/templates/propertyTween.tpl.html
@@ -6,3 +6,7 @@
     {{/options}}
   </select>
 </div>
+<div class="properties-editor__actions actions">
+  <span class="property__key-time">key at <strong>{{time}}</strong> seconds</span>
+  <a href="#" class="actions__item" data-action-remove>Remove key</a>
+</div>
