--- a/src/styles/editor/_properties-editor.sass
+++ b/src/styles/editor/_properties-editor.sass
@@ -66,6 +66,12 @@
   &--active
     background: #39C2C8
 
+.property__key-time
+  margin-right: 10px
+  color: #777
+  strong
+    color: #ddd
+
 .property__input
   background: #57595a
   border: 1px solid #2f3132
