should fix occasional color issue in control buttons

--- a/src/styles/editor/_controls.sass
+++ b/src/styles/editor/_controls.sass
@@ -8,9 +8,11 @@
   display: inline-block
   margin-right: 5px
   font-size: 18px
-  color: #ddd
   text-decoration: none
-  &:hover
+
+  &, &:active, &:visited
+    color: #ddd
+  &:hover, &:focus
     color: #fff
 
 .control--input
