show key informations when item is closes but make them not editable, fix #8

--- a/src/styles/editor/_key.sass
+++ b/src/styles/editor/_key.sass
@@ -37,5 +37,8 @@ $ease-color: #6ECEDF
   .ease-inout
     display: block
 
-.key
-  .ease-i
+.key--preview
+  fill: $key-color
+  fill-opacity: 0.3
+  shape-rendering: geometricPrecision
+  pointer-events: none
