possibility to change the key time in editor by clicking on the time, fix #15

--- a/src/styles/editor/_properties-editor.sass
+++ b/src/styles/editor/_properties-editor.sass
@@ -69,8 +69,9 @@
 .property__key-time
   margin-right: 10px
   color: #777
-  strong
-    color: #ddd
+
+.property__key-input
+  color: #ddd
 
 .property__input
   background: #57595a
