--- a/src/scripts/templates/propertyTween.tpl.html
+++ b/src/scripts/templates/propertyTween.tpl.html
@@ -7,6 +7,6 @@
   </select>
 </div>
 <div class="properties-editor__actions actions">
-  <span class="property__key-time">key at <strong>{{time}}</strong> seconds</span>
+  <span class="property__key-time">key at <strong class="property__key-input" contenteditable="true">{{time}}</strong> seconds</span>
   <a href="#" class="actions__item" data-action-remove>Remove key</a>
 </div>
