fix properties closing, fix #22

--- a/src/styles/editor/_properties-editor.sass
+++ b/src/styles/editor/_properties-editor.sass
@@ -93,6 +93,8 @@ a.menu-item--toggle-side
 
   .properties-is-closed &
     left: -27px
+    color: #fff
+    text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.6)
 
   i
     &:before
