--- a/src/scripts/templates/propertyTween.tpl.html
+++ b/src/scripts/templates/propertyTween.tpl.html
@@ -1,10 +1,14 @@
 <div class="property property--tween">
   <label for="{{id}}" class="property__label">easing</label>
-  <select id="{{id}}" class="property__select">
-    {{#options}}
-    <option value="{{.}}" {{selected}}>{{.}}</option>
-    {{/options}}
-  </select>
+  <div class="property__select">
+    <div class="custom-select">
+      <select id="{{id}}">
+        {{#options}}
+        <option value="{{.}}" {{selected}}>{{.}}</option>
+        {{/options}}
+      </select>
+    </div>
+  </div>
 </div>
 <div class="properties-editor__actions actions">
   <span class="property__key-time">key at <strong class="property__key-input" contenteditable="true">{{time}}</strong> seconds</span>
