fix small visual bug in properties editor in firefox

--- a/src/styles/editor/_properties-editor.sass
+++ b/src/styles/editor/_properties-editor.sass
@@ -23,6 +23,7 @@
 
   .property
     overflow: hidden
+    position: relative
     min-height: 26px
     line-height: 25px
 
@@ -45,12 +46,14 @@
   min-width: 50px
   min-height: 25px
   margin-right: 10px
+  margin-left: 18px
   color: #fff
 
 .property__key
-  display: inline-block
-  position: relative
-  top: 1px
+  display: block
+  position: absolute
+  top: 50%
+  margin-top: -4px
   width: 8px
   height: 8px
   padding: 0
