add properties grouping and an example, fix #30

--- a/src/styles/editor/_properties-editor.sass
+++ b/src/styles/editor/_properties-editor.sass
@@ -40,6 +40,19 @@
     color: #fff
     text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.8)
 
+.property-grp
+  padding-bottom: 10px
+
+.property-grp__title
+  margin: 0 -10px 7px -10px
+  padding: 2px 10px
+  //border-top: 1px solid #1F2021
+  border-bottom: 1px solid #3C3E3F
+  //background: #242627
+  color: #fff
+  font-size: 11px
+  text-transform: uppercase
+
 .property__label
   position: relative
   display: inline-block
