updated icons and scripts

--- a/src/scripts/templates/timeline.tpl.html
+++ b/src/scripts/templates/timeline.tpl.html
@@ -4,7 +4,7 @@
     <a href="#" class="menu-item menu-item--toggle" data-action="toggle"><i class="icon-toggle"></i></a>
   </nav>
   <div class="timeline__controls controls">
-    <a href="#" class="control control--first icon-backwards"></a>
+    <a href="#" class="control control--first icon-backward"></a>
     <a href="#" class="control control--play-pause icon-play"></a>
     <a href="#" class="control control--last icon-forward"></a>
     <input type="text" class="control control--input control--time" /> <span class="control__time-separator">/</span> <input type="text" class="control control--input control--time-end" />
