--- a/src/styles/editor/_editor.sass
+++ b/src/styles/editor/_editor.sass
@@ -1,15 +1,15 @@
-#timeline-container
-  @import "settings"
-  @import "timeline-header"
+@import "settings"
+@import "timeline-header"
+@import "timeline"
+@import "properties-editor"
+@import "time-indicator"
+@import "line-label"
+@import "line-separator"
+@import "bar"
+@import "key"
+@import "error"
+@import "selection"
+@import "content-wrapper"
+@import "custom-select"
+.timeline
   @import "controls"
-  @import "timeline"
-  @import "properties-editor"
-  @import "time-indicator"
-  @import "line-label"
-  @import "line-separator"
-  @import "bar"
-  @import "key"
-  @import "error"
-  @import "selection"
-  @import "content-wrapper"
-  @import "custom-select"
