Preparing curve edition

--- a/src/scripts/templates/timeline.tpl.html
+++ b/src/scripts/templates/timeline.tpl.html
@@ -1,6 +1,7 @@
 <div class="timeline">
   <nav class="timeline__menu">
     <a href="#" class="menu-item" data-action="export">Export</a>
+    <a href="#" class="menu-item" data-action="switch-curve">Switch curve editor</a>
     <a href="#" class="menu-item menu-item--toggle" data-action="toggle"><i class="icon-toggle"></i></a>
   </nav>
   <div class="timeline__controls controls">
