Adding handle point and lines

--- a/src/styles/editor/_curve.sass
+++ b/src/styles/editor/_curve.sass
@@ -1,4 +1,10 @@
-.timeline .curve
-  shape-rendering: auto
-  stroke-linejoin: miter
-  stroke-width: 1px
+.timeline
+  .curve
+    shape-rendering: auto
+    stroke-linejoin: miter
+    stroke-width: 1px
+
+  .curve__handle-line
+    stroke-dasharray: 2px
+    shape-rendering: geometricPrecision
+    stroke: #696969
