Don’t draw selection on curve handle mousedown/drag

--- a/src/styles/editor/_curve.sass
+++ b/src/styles/editor/_curve.sass
@@ -8,3 +8,8 @@
     stroke-dasharray: 2px
     shape-rendering: geometricPrecision
     stroke: #696969
+
+  .curve__handle
+    transition: fill 0.2s
+    &:hover
+      fill: #6ECEDF
